# idlecoin

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  file.rs  main.rs  miner.rs  utils.rs  wallet.rs
