[package]
name = "idlecoin"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
signal-hook = "0.3.13"
rand = "0.8.5"
